// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`снапшоты экранаў > finish (cyr) 1`] = `
<div
  class="screen screen--scroll"
  style="--team: #2f8a4b;"
>
  <div
    class="finish"
  >
    <svg
      aria-hidden="true"
      class="band finish__band"
      data-band="dotted"
      height="18.857142857142858"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="12"
          id="_r_6_"
          patternUnits="userSpaceOnUse"
          width="10.285714285714285"
          x="50%"
        >
          <path
            d="M5.142857142857142 0h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM0 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 10.285714285714285h1.7142857142857142v1.7142857142857142h-1.7142857142857142z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="0"
      />
      <rect
        fill="url(#_r_6_)"
        height="12"
        width="100%"
        x="0"
        y="3.4285714285714284"
      />
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="17.142857142857142"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="motif finish__motif"
      data-motif="tree"
      height="80"
      shape-rendering="crispEdges"
      viewBox="0 0 9 9"
      width="80"
    >
      <path
        d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM1 3h1v1h-1zM4 3h1v1h-1zM7 3h1v1h-1zM2 4h1v1h-1zM4 4h1v1h-1zM6 4h1v1h-1zM1 5h1v1h-1zM4 5h1v1h-1zM7 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM4 7h1v1h-1zM3 8h1v1h-1zM4 8h1v1h-1zM5 8h1v1h-1z"
        fill="currentColor"
      />
    </svg>
    <p
      class="finish__eyebrow"
    >
      Перамога
    </p>
    <h2
      class="finish__team"
    >
      Ваўкі
    </h2>
    <p
      class="finish__score"
    >
      20 ачкоў
       
      за
       
      3 раунды
    </p>
    <svg
      aria-hidden="true"
      class="band finish__band"
      data-band="dotted"
      height="18.857142857142858"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="12"
          id="_r_7_"
          patternUnits="userSpaceOnUse"
          width="10.285714285714285"
          x="50%"
        >
          <path
            d="M5.142857142857142 0h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM0 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 10.285714285714285h1.7142857142857142v1.7142857142857142h-1.7142857142857142z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="0"
      />
      <rect
        fill="url(#_r_7_)"
        height="12"
        width="100%"
        x="0"
        y="3.4285714285714284"
      />
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="17.142857142857142"
      />
    </svg>
  </div>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Выніковая табліца
    </h2>
    <ul
      class="scoreboard"
    >
      <li
        class="scoreboard__row"
        style="--team: #2f8a4b;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="tree"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM1 3h1v1h-1zM4 3h1v1h-1zM7 3h1v1h-1zM2 4h1v1h-1zM4 4h1v1h-1zM6 4h1v1h-1zM1 5h1v1h-1zM4 5h1v1h-1zM7 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM4 7h1v1h-1zM3 8h1v1h-1zM4 8h1v1h-1zM5 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Ваўкі
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 66.66666666666666%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          20
        </span>
      </li>
      <li
        class="scoreboard__row"
        style="--team: #c1272d;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="sun"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M0 0h1v1h-1zM4 0h1v1h-1zM8 0h1v1h-1zM1 1h1v1h-1zM4 1h1v1h-1zM7 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM3 3h1v1h-1zM4 3h1v1h-1zM5 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM3 4h1v1h-1zM5 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM3 5h1v1h-1zM4 5h1v1h-1zM5 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM1 7h1v1h-1zM4 7h1v1h-1zM7 7h1v1h-1zM0 8h1v1h-1zM4 8h1v1h-1zM8 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Зубры
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 40%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          12
        </span>
      </li>
      <li
        class="scoreboard__row"
        style="--team: #2b6cc4;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="star"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM1 2h1v1h-1zM3 2h1v1h-1zM5 2h1v1h-1zM7 2h1v1h-1zM2 3h1v1h-1zM6 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM2 5h1v1h-1zM6 5h1v1h-1zM1 6h1v1h-1zM3 6h1v1h-1zM5 6h1v1h-1zM7 6h1v1h-1zM3 7h1v1h-1zM4 7h1v1h-1zM5 7h1v1h-1zM4 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Буслы
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 23.333333333333332%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          7
        </span>
      </li>
    </ul>
  </section>
  <div
    class="actions actions--sticky"
  >
    <button
      class="btn btn--ghost"
      type="button"
    >
      Налады
    </button>
    <button
      class="btn btn--primary"
      type="button"
    >
      Яшчэ раз
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > finish (lat) 1`] = `
<div
  class="screen screen--scroll"
  style="--team: #2f8a4b;"
>
  <div
    class="finish"
  >
    <svg
      aria-hidden="true"
      class="band finish__band"
      data-band="dotted"
      height="18.857142857142858"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="12"
          id="_r_f_"
          patternUnits="userSpaceOnUse"
          width="10.285714285714285"
          x="50%"
        >
          <path
            d="M5.142857142857142 0h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM0 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 10.285714285714285h1.7142857142857142v1.7142857142857142h-1.7142857142857142z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="0"
      />
      <rect
        fill="url(#_r_f_)"
        height="12"
        width="100%"
        x="0"
        y="3.4285714285714284"
      />
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="17.142857142857142"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="motif finish__motif"
      data-motif="tree"
      height="80"
      shape-rendering="crispEdges"
      viewBox="0 0 9 9"
      width="80"
    >
      <path
        d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM1 3h1v1h-1zM4 3h1v1h-1zM7 3h1v1h-1zM2 4h1v1h-1zM4 4h1v1h-1zM6 4h1v1h-1zM1 5h1v1h-1zM4 5h1v1h-1zM7 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM4 7h1v1h-1zM3 8h1v1h-1zM4 8h1v1h-1zM5 8h1v1h-1z"
        fill="currentColor"
      />
    </svg>
    <p
      class="finish__eyebrow"
    >
      Pieramoha
    </p>
    <h2
      class="finish__team"
    >
      Vaŭki
    </h2>
    <p
      class="finish__score"
    >
      20 ačkoŭ
       
      za
       
      3 raundy
    </p>
    <svg
      aria-hidden="true"
      class="band finish__band"
      data-band="dotted"
      height="18.857142857142858"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="12"
          id="_r_g_"
          patternUnits="userSpaceOnUse"
          width="10.285714285714285"
          x="50%"
        >
          <path
            d="M5.142857142857142 0h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM0 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 10.285714285714285h1.7142857142857142v1.7142857142857142h-1.7142857142857142z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="0"
      />
      <rect
        fill="url(#_r_g_)"
        height="12"
        width="100%"
        x="0"
        y="3.4285714285714284"
      />
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="17.142857142857142"
      />
    </svg>
  </div>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Vynikovaja tablica
    </h2>
    <ul
      class="scoreboard"
    >
      <li
        class="scoreboard__row"
        style="--team: #2f8a4b;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="tree"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM1 3h1v1h-1zM4 3h1v1h-1zM7 3h1v1h-1zM2 4h1v1h-1zM4 4h1v1h-1zM6 4h1v1h-1zM1 5h1v1h-1zM4 5h1v1h-1zM7 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM4 7h1v1h-1zM3 8h1v1h-1zM4 8h1v1h-1zM5 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Vaŭki
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 66.66666666666666%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          20
        </span>
      </li>
      <li
        class="scoreboard__row"
        style="--team: #c1272d;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="sun"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M0 0h1v1h-1zM4 0h1v1h-1zM8 0h1v1h-1zM1 1h1v1h-1zM4 1h1v1h-1zM7 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM3 3h1v1h-1zM4 3h1v1h-1zM5 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM3 4h1v1h-1zM5 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM3 5h1v1h-1zM4 5h1v1h-1zM5 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM1 7h1v1h-1zM4 7h1v1h-1zM7 7h1v1h-1zM0 8h1v1h-1zM4 8h1v1h-1zM8 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Zubry
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 40%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          12
        </span>
      </li>
      <li
        class="scoreboard__row"
        style="--team: #2b6cc4;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="star"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM1 2h1v1h-1zM3 2h1v1h-1zM5 2h1v1h-1zM7 2h1v1h-1zM2 3h1v1h-1zM6 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM2 5h1v1h-1zM6 5h1v1h-1zM1 6h1v1h-1zM3 6h1v1h-1zM5 6h1v1h-1zM7 6h1v1h-1zM3 7h1v1h-1zM4 7h1v1h-1zM5 7h1v1h-1zM4 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Busły
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 23.333333333333332%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          7
        </span>
      </li>
    </ul>
  </section>
  <div
    class="actions actions--sticky"
  >
    <button
      class="btn btn--ghost"
      type="button"
    >
      Nałady
    </button>
    <button
      class="btn btn--primary"
      type="button"
    >
      Jašče raz
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > play (cyr) 1`] = `
<div
  class="screen screen--play"
  style="--team: #c1272d;"
>
  <header
    class="playbar"
  >
    <button
      aria-label="Паўза"
      class="playbar__btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="18"
        viewBox="0 0 20 20"
        width="18"
      >
        <rect
          fill="currentColor"
          height="14"
          rx="1"
          width="4"
          x="4"
          y="3"
        />
        <rect
          fill="currentColor"
          height="14"
          rx="1"
          width="4"
          x="12"
          y="3"
        />
      </svg>
    </button>
    <span
      class="playbar__team"
    >
      <svg
        aria-hidden="true"
        class="motif"
        data-motif="sun"
        height="18"
        shape-rendering="crispEdges"
        viewBox="0 0 9 9"
        width="18"
      >
        <path
          d="M0 0h1v1h-1zM4 0h1v1h-1zM8 0h1v1h-1zM1 1h1v1h-1zM4 1h1v1h-1zM7 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM3 3h1v1h-1zM4 3h1v1h-1zM5 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM3 4h1v1h-1zM5 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM3 5h1v1h-1zM4 5h1v1h-1zM5 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM1 7h1v1h-1zM4 7h1v1h-1zM7 7h1v1h-1zM0 8h1v1h-1zM4 8h1v1h-1zM8 8h1v1h-1z"
          fill="currentColor"
        />
      </svg>
      <span
        class="playbar__name"
      >
        Зубры
      </span>
    </span>
    <span
      aria-label="Ачкі за раунд"
      class="playbar__score"
    >
      +1
    </span>
  </header>
  <div
    aria-live="off"
    class="timer"
    role="timer"
  >
    <div
      class="timer__track"
    >
      <div
        class="timer__fill"
        style="transform: scaleX(0.7);"
      />
    </div>
    <span
      class="timer__value"
    >
      42
    </span>
  </div>
  <div
    class="cardzone"
  >
    <div
      class="card"
      lang="be"
      style="transform: translateX(0px) rotate(0deg);"
    >
      <svg
        aria-hidden="true"
        class="band card__band"
        data-band="zigzag"
        height="8"
        shape-rendering="crispEdges"
        width="100%"
      >
        <defs>
          <pattern
            height="8"
            id="_r_3_"
            patternUnits="userSpaceOnUse"
            width="10.666666666666666"
            x="50%"
          >
            <path
              d="M0 0h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM2.6666666666666665 2.6666666666666665h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM8 2.6666666666666665h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM5.333333333333333 5.333333333333333h2.6666666666666665v2.6666666666666665h-2.6666666666666665z"
              fill="currentColor"
            />
          </pattern>
        </defs>
        <rect
          fill="url(#_r_3_)"
          height="8"
          width="100%"
          x="0"
          y="0"
        />
      </svg>
      <p
        class="card__word"
        data-len="s"
      >
        вясёлка
      </p>
      <p
        class="card__index"
      >
        2
      </p>
      <svg
        aria-hidden="true"
        class="band card__band card__band--bottom"
        data-band="zigzag"
        height="8"
        shape-rendering="crispEdges"
        width="100%"
      >
        <defs>
          <pattern
            height="8"
            id="_r_4_"
            patternUnits="userSpaceOnUse"
            width="10.666666666666666"
            x="50%"
          >
            <path
              d="M0 0h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM2.6666666666666665 2.6666666666666665h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM8 2.6666666666666665h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM5.333333333333333 5.333333333333333h2.6666666666666665v2.6666666666666665h-2.6666666666666665z"
              fill="currentColor"
            />
          </pattern>
        </defs>
        <rect
          fill="url(#_r_4_)"
          height="8"
          width="100%"
          x="0"
          y="0"
        />
      </svg>
      <span
        aria-hidden="true"
        class="card__stamp card__stamp--ok"
        style="opacity: 0;"
      >
        ✓
      </span>
      <span
        aria-hidden="true"
        class="card__stamp card__stamp--skip"
        style="opacity: 0;"
      >
        ✕
      </span>
    </div>
    <p
      class="card__swipe"
    >
      ← 
      пас
       · 
      адгадана
       →
    </p>
  </div>
  <div
    class="answers"
  >
    <button
      class="answer answer--skip"
      type="button"
    >
      <span
        aria-hidden="true"
        class="answer__icon"
      >
        ✕
      </span>
      Пас
    </button>
    <button
      class="answer answer--ok"
      type="button"
    >
      <span
        aria-hidden="true"
        class="answer__icon"
      >
        ✓
      </span>
      Адгадана
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > play (lat) 1`] = `
<div
  class="screen screen--play"
  style="--team: #c1272d;"
>
  <header
    class="playbar"
  >
    <button
      aria-label="Paŭza"
      class="playbar__btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="18"
        viewBox="0 0 20 20"
        width="18"
      >
        <rect
          fill="currentColor"
          height="14"
          rx="1"
          width="4"
          x="4"
          y="3"
        />
        <rect
          fill="currentColor"
          height="14"
          rx="1"
          width="4"
          x="12"
          y="3"
        />
      </svg>
    </button>
    <span
      class="playbar__team"
    >
      <svg
        aria-hidden="true"
        class="motif"
        data-motif="sun"
        height="18"
        shape-rendering="crispEdges"
        viewBox="0 0 9 9"
        width="18"
      >
        <path
          d="M0 0h1v1h-1zM4 0h1v1h-1zM8 0h1v1h-1zM1 1h1v1h-1zM4 1h1v1h-1zM7 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM3 3h1v1h-1zM4 3h1v1h-1zM5 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM3 4h1v1h-1zM5 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM3 5h1v1h-1zM4 5h1v1h-1zM5 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM1 7h1v1h-1zM4 7h1v1h-1zM7 7h1v1h-1zM0 8h1v1h-1zM4 8h1v1h-1zM8 8h1v1h-1z"
          fill="currentColor"
        />
      </svg>
      <span
        class="playbar__name"
      >
        Zubry
      </span>
    </span>
    <span
      aria-label="Ački za raund"
      class="playbar__score"
    >
      +1
    </span>
  </header>
  <div
    aria-live="off"
    class="timer"
    role="timer"
  >
    <div
      class="timer__track"
    >
      <div
        class="timer__fill"
        style="transform: scaleX(0.7);"
      />
    </div>
    <span
      class="timer__value"
    >
      42
    </span>
  </div>
  <div
    class="cardzone"
  >
    <div
      class="card"
      lang="be-Latn"
      style="transform: translateX(0px) rotate(0deg);"
    >
      <svg
        aria-hidden="true"
        class="band card__band"
        data-band="zigzag"
        height="8"
        shape-rendering="crispEdges"
        width="100%"
      >
        <defs>
          <pattern
            height="8"
            id="_r_c_"
            patternUnits="userSpaceOnUse"
            width="10.666666666666666"
            x="50%"
          >
            <path
              d="M0 0h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM2.6666666666666665 2.6666666666666665h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM8 2.6666666666666665h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM5.333333333333333 5.333333333333333h2.6666666666666665v2.6666666666666665h-2.6666666666666665z"
              fill="currentColor"
            />
          </pattern>
        </defs>
        <rect
          fill="url(#_r_c_)"
          height="8"
          width="100%"
          x="0"
          y="0"
        />
      </svg>
      <p
        class="card__word"
        data-len="m"
      >
        viasiołka
      </p>
      <p
        class="card__index"
      >
        2
      </p>
      <svg
        aria-hidden="true"
        class="band card__band card__band--bottom"
        data-band="zigzag"
        height="8"
        shape-rendering="crispEdges"
        width="100%"
      >
        <defs>
          <pattern
            height="8"
            id="_r_d_"
            patternUnits="userSpaceOnUse"
            width="10.666666666666666"
            x="50%"
          >
            <path
              d="M0 0h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM2.6666666666666665 2.6666666666666665h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM8 2.6666666666666665h2.6666666666666665v2.6666666666666665h-2.6666666666666665zM5.333333333333333 5.333333333333333h2.6666666666666665v2.6666666666666665h-2.6666666666666665z"
              fill="currentColor"
            />
          </pattern>
        </defs>
        <rect
          fill="url(#_r_d_)"
          height="8"
          width="100%"
          x="0"
          y="0"
        />
      </svg>
      <span
        aria-hidden="true"
        class="card__stamp card__stamp--ok"
        style="opacity: 0;"
      >
        ✓
      </span>
      <span
        aria-hidden="true"
        class="card__stamp card__stamp--skip"
        style="opacity: 0;"
      >
        ✕
      </span>
    </div>
    <p
      class="card__swipe"
    >
      ← 
      pas
       · 
      adhadana
       →
    </p>
  </div>
  <div
    class="answers"
  >
    <button
      class="answer answer--skip"
      type="button"
    >
      <span
        aria-hidden="true"
        class="answer__icon"
      >
        ✕
      </span>
      Pas
    </button>
    <button
      class="answer answer--ok"
      type="button"
    >
      <span
        aria-hidden="true"
        class="answer__icon"
      >
        ✓
      </span>
      Adhadana
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > ready (cyr) 1`] = `
<div
  class="screen screen--scroll"
  style="--team: #2b6cc4;"
>
  <header
    class="topbar"
  >
    <button
      class="topbar__btn"
      type="button"
    >
      Налады
    </button>
    <span
      class="topbar__title"
    >
      Раунд
       
      2
    </span>
    <button
      class="topbar__btn"
      type="button"
    >
      Правілы
    </button>
  </header>
  <div
    class="ready"
  >
    <svg
      aria-label="Знак каманды"
      class="motif ready__motif"
      data-motif="star"
      height="72"
      role="img"
      shape-rendering="crispEdges"
      viewBox="0 0 9 9"
      width="72"
    >
      <path
        d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM1 2h1v1h-1zM3 2h1v1h-1zM5 2h1v1h-1zM7 2h1v1h-1zM2 3h1v1h-1zM6 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM2 5h1v1h-1zM6 5h1v1h-1zM1 6h1v1h-1zM3 6h1v1h-1zM5 6h1v1h-1zM7 6h1v1h-1zM3 7h1v1h-1zM4 7h1v1h-1zM5 7h1v1h-1zM4 8h1v1h-1z"
        fill="currentColor"
      />
    </svg>
    <p
      class="ready__eyebrow"
    >
      Тлумачыць
    </p>
    <h2
      class="ready__team"
    >
      Буслы
    </h2>
    <svg
      aria-hidden="true"
      class="band ready__band"
      data-band="chain"
      height="10"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="10"
          id="_r_2_"
          patternUnits="userSpaceOnUse"
          width="8.571428571428571"
          x="50%"
        >
          <path
            d="M4.285714285714286 0h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM0 4.285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM4.285714285714286 8.571428571428571h1.4285714285714286v1.4285714285714286h-1.4285714285714286z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="url(#_r_2_)"
        height="10"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
    <p
      class="ready__hint"
    >
      Перадайце тэлефон таму, хто тлумачыць. Астатнія ў камандзе адгадваюць слова — называць аднакаранёвыя словы нельга.
    </p>
    <button
      class="bigbtn"
      type="button"
    >
      Пачаць раунд
      <span
        class="bigbtn__sub"
      >
        60
         
        секунд
      </span>
    </button>
  </div>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Рахунак — да
       
      30
    </h2>
    <ul
      class="scoreboard"
    >
      <li
        class="scoreboard__row"
        style="--team: #c1272d;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="sun"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M0 0h1v1h-1zM4 0h1v1h-1zM8 0h1v1h-1zM1 1h1v1h-1zM4 1h1v1h-1zM7 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM3 3h1v1h-1zM4 3h1v1h-1zM5 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM3 4h1v1h-1zM5 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM3 5h1v1h-1zM4 5h1v1h-1zM5 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM1 7h1v1h-1zM4 7h1v1h-1zM7 7h1v1h-1zM0 8h1v1h-1zM4 8h1v1h-1zM8 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Зубры
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 40%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          12
        </span>
      </li>
      <li
        aria-current="true"
        class="scoreboard__row is-active"
        style="--team: #2b6cc4;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="star"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM1 2h1v1h-1zM3 2h1v1h-1zM5 2h1v1h-1zM7 2h1v1h-1zM2 3h1v1h-1zM6 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM2 5h1v1h-1zM6 5h1v1h-1zM1 6h1v1h-1zM3 6h1v1h-1zM5 6h1v1h-1zM7 6h1v1h-1zM3 7h1v1h-1zM4 7h1v1h-1zM5 7h1v1h-1zM4 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Буслы
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 23.333333333333332%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          7
        </span>
      </li>
      <li
        class="scoreboard__row"
        style="--team: #2f8a4b;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="tree"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM1 3h1v1h-1zM4 3h1v1h-1zM7 3h1v1h-1zM2 4h1v1h-1zM4 4h1v1h-1zM6 4h1v1h-1zM1 5h1v1h-1zM4 5h1v1h-1zM7 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM4 7h1v1h-1zM3 8h1v1h-1zM4 8h1v1h-1zM5 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Ваўкі
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 66.66666666666666%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          20
        </span>
      </li>
    </ul>
  </section>
  <div
    class="actions"
  >
    <button
      class="btn btn--ghost btn--wide"
      type="button"
    >
      Скончыць гульню
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > ready (lat) 1`] = `
<div
  class="screen screen--scroll"
  style="--team: #2b6cc4;"
>
  <header
    class="topbar"
  >
    <button
      class="topbar__btn"
      type="button"
    >
      Nałady
    </button>
    <span
      class="topbar__title"
    >
      Raund
       
      2
    </span>
    <button
      class="topbar__btn"
      type="button"
    >
      Praviły
    </button>
  </header>
  <div
    class="ready"
  >
    <svg
      aria-label="Znak kamandy"
      class="motif ready__motif"
      data-motif="star"
      height="72"
      role="img"
      shape-rendering="crispEdges"
      viewBox="0 0 9 9"
      width="72"
    >
      <path
        d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM1 2h1v1h-1zM3 2h1v1h-1zM5 2h1v1h-1zM7 2h1v1h-1zM2 3h1v1h-1zM6 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM2 5h1v1h-1zM6 5h1v1h-1zM1 6h1v1h-1zM3 6h1v1h-1zM5 6h1v1h-1zM7 6h1v1h-1zM3 7h1v1h-1zM4 7h1v1h-1zM5 7h1v1h-1zM4 8h1v1h-1z"
        fill="currentColor"
      />
    </svg>
    <p
      class="ready__eyebrow"
    >
      Tłumačyć
    </p>
    <h2
      class="ready__team"
    >
      Busły
    </h2>
    <svg
      aria-hidden="true"
      class="band ready__band"
      data-band="chain"
      height="10"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="10"
          id="_r_b_"
          patternUnits="userSpaceOnUse"
          width="8.571428571428571"
          x="50%"
        >
          <path
            d="M4.285714285714286 0h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM0 4.285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM4.285714285714286 8.571428571428571h1.4285714285714286v1.4285714285714286h-1.4285714285714286z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="url(#_r_b_)"
        height="10"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
    <p
      class="ready__hint"
    >
      Pieradajcie telefon tamu, chto tłumačyć. Astatnija ŭ kamandzie adhadvajuć słova — nazyvać adnakaraniovyja słovy nielha.
    </p>
    <button
      class="bigbtn"
      type="button"
    >
      Pačać raund
      <span
        class="bigbtn__sub"
      >
        60
         
        siekund
      </span>
    </button>
  </div>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Rachunak — da
       
      30
    </h2>
    <ul
      class="scoreboard"
    >
      <li
        class="scoreboard__row"
        style="--team: #c1272d;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="sun"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M0 0h1v1h-1zM4 0h1v1h-1zM8 0h1v1h-1zM1 1h1v1h-1zM4 1h1v1h-1zM7 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM3 3h1v1h-1zM4 3h1v1h-1zM5 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM3 4h1v1h-1zM5 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM3 5h1v1h-1zM4 5h1v1h-1zM5 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM1 7h1v1h-1zM4 7h1v1h-1zM7 7h1v1h-1zM0 8h1v1h-1zM4 8h1v1h-1zM8 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Zubry
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 40%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          12
        </span>
      </li>
      <li
        aria-current="true"
        class="scoreboard__row is-active"
        style="--team: #2b6cc4;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="star"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM1 2h1v1h-1zM3 2h1v1h-1zM5 2h1v1h-1zM7 2h1v1h-1zM2 3h1v1h-1zM6 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM2 5h1v1h-1zM6 5h1v1h-1zM1 6h1v1h-1zM3 6h1v1h-1zM5 6h1v1h-1zM7 6h1v1h-1zM3 7h1v1h-1zM4 7h1v1h-1zM5 7h1v1h-1zM4 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Busły
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 23.333333333333332%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          7
        </span>
      </li>
      <li
        class="scoreboard__row"
        style="--team: #2f8a4b;"
      >
        <svg
          aria-hidden="true"
          class="motif scoreboard__motif"
          data-motif="tree"
          height="20"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="20"
        >
          <path
            d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM1 3h1v1h-1zM4 3h1v1h-1zM7 3h1v1h-1zM2 4h1v1h-1zM4 4h1v1h-1zM6 4h1v1h-1zM1 5h1v1h-1zM4 5h1v1h-1zM7 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM4 7h1v1h-1zM3 8h1v1h-1zM4 8h1v1h-1zM5 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <span
          class="scoreboard__name"
        >
          Vaŭki
        </span>
        <span
          aria-hidden="true"
          class="scoreboard__bar"
        >
          <span
            class="scoreboard__fill"
            style="width: 66.66666666666666%;"
          />
        </span>
        <span
          class="scoreboard__score"
        >
          20
        </span>
      </li>
    </ul>
  </section>
  <div
    class="actions"
  >
    <button
      class="btn btn--ghost btn--wide"
      type="button"
    >
      Skončyć hulniu
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > result (cyr) 1`] = `
<div
  class="screen screen--scroll"
  style="--team: #c1272d;"
>
  <header
    class="topbar topbar--center"
  >
    <span
      class="topbar__title topbar__title--team"
    >
      <svg
        aria-hidden="true"
        class="motif"
        data-motif="sun"
        height="18"
        shape-rendering="crispEdges"
        viewBox="0 0 9 9"
        width="18"
      >
        <path
          d="M0 0h1v1h-1zM4 0h1v1h-1zM8 0h1v1h-1zM1 1h1v1h-1zM4 1h1v1h-1zM7 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM3 3h1v1h-1zM4 3h1v1h-1zM5 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM3 4h1v1h-1zM5 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM3 5h1v1h-1zM4 5h1v1h-1zM5 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM1 7h1v1h-1zM4 7h1v1h-1zM7 7h1v1h-1zM0 8h1v1h-1zM4 8h1v1h-1zM8 8h1v1h-1z"
          fill="currentColor"
        />
      </svg>
      Зубры
    </span>
  </header>
  <div
    class="result"
  >
    <p
      class="result__delta"
    >
      0
    </p>
    <svg
      aria-hidden="true"
      class="band result__band"
      data-band="chain"
      height="10"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="10"
          id="_r_5_"
          patternUnits="userSpaceOnUse"
          width="8.571428571428571"
          x="50%"
        >
          <path
            d="M4.285714285714286 0h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM0 4.285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM4.285714285714286 8.571428571428571h1.4285714285714286v1.4285714285714286h-1.4285714285714286z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="url(#_r_5_)"
        height="10"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
    <p
      class="result__summary"
    >
      адгадана
       
      1
       · 
      пас
       
      1
    </p>
    <p
      class="hint"
    >
      Націсніце на слова, каб выправіць адзнаку.
    </p>
  </div>
  <ul
    class="wordlist"
  >
    <li>
      <button
        aria-pressed="true"
        class="wordlist__item is-ok"
        type="button"
      >
        <span
          class="wordlist__word"
        >
          хлеб
        </span>
        <span
          aria-hidden="true"
          class="wordlist__mark"
        >
          ✓
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="wordlist__item is-skip"
        type="button"
      >
        <span
          class="wordlist__word"
        >
          соль
        </span>
        <span
          aria-hidden="true"
          class="wordlist__mark"
        >
          ✕
        </span>
      </button>
    </li>
  </ul>
  <div
    class="actions actions--sticky"
  >
    <button
      class="btn btn--primary"
      type="button"
    >
      Далей
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > result (lat) 1`] = `
<div
  class="screen screen--scroll"
  style="--team: #c1272d;"
>
  <header
    class="topbar topbar--center"
  >
    <span
      class="topbar__title topbar__title--team"
    >
      <svg
        aria-hidden="true"
        class="motif"
        data-motif="sun"
        height="18"
        shape-rendering="crispEdges"
        viewBox="0 0 9 9"
        width="18"
      >
        <path
          d="M0 0h1v1h-1zM4 0h1v1h-1zM8 0h1v1h-1zM1 1h1v1h-1zM4 1h1v1h-1zM7 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM3 3h1v1h-1zM4 3h1v1h-1zM5 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM3 4h1v1h-1zM5 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM3 5h1v1h-1zM4 5h1v1h-1zM5 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM1 7h1v1h-1zM4 7h1v1h-1zM7 7h1v1h-1zM0 8h1v1h-1zM4 8h1v1h-1zM8 8h1v1h-1z"
          fill="currentColor"
        />
      </svg>
      Zubry
    </span>
  </header>
  <div
    class="result"
  >
    <p
      class="result__delta"
    >
      0
    </p>
    <svg
      aria-hidden="true"
      class="band result__band"
      data-band="chain"
      height="10"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="10"
          id="_r_e_"
          patternUnits="userSpaceOnUse"
          width="8.571428571428571"
          x="50%"
        >
          <path
            d="M4.285714285714286 0h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM0 4.285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM4.285714285714286 8.571428571428571h1.4285714285714286v1.4285714285714286h-1.4285714285714286z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="url(#_r_e_)"
        height="10"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
    <p
      class="result__summary"
    >
      adhadana
       
      1
       · 
      pas
       
      1
    </p>
    <p
      class="hint"
    >
      Nacisnicie na słova, kab vypravić adznaku.
    </p>
  </div>
  <ul
    class="wordlist"
  >
    <li>
      <button
        aria-pressed="true"
        class="wordlist__item is-ok"
        type="button"
      >
        <span
          class="wordlist__word"
        >
          chleb
        </span>
        <span
          aria-hidden="true"
          class="wordlist__mark"
        >
          ✓
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="wordlist__item is-skip"
        type="button"
      >
        <span
          class="wordlist__word"
        >
          sol
        </span>
        <span
          aria-hidden="true"
          class="wordlist__mark"
        >
          ✕
        </span>
      </button>
    </li>
  </ul>
  <div
    class="actions actions--sticky"
  >
    <button
      class="btn btn--primary"
      type="button"
    >
      Dalej
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > rules (cyr) 1`] = `
<div
  aria-label="Правілы гульні"
  aria-modal="true"
  class="sheet"
  role="dialog"
>
  <div
    class="sheet__backdrop"
  />
  <div
    class="sheet__body"
  >
    <div
      aria-hidden="true"
      class="sheet__grip"
    />
    <h2
      class="sheet__title"
    >
      Правілы
    </h2>
    <svg
      aria-hidden="true"
      class="band sheet__band"
      data-band="chain"
      height="10"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="10"
          id="_r_8_"
          patternUnits="userSpaceOnUse"
          width="8.571428571428571"
          x="50%"
        >
          <path
            d="M4.285714285714286 0h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM0 4.285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM4.285714285714286 8.571428571428571h1.4285714285714286v1.4285714285714286h-1.4285714285714286z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="url(#_r_8_)"
        height="10"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
    <ol
      class="rules"
    >
      <li>
        Гульцы дзеляцца на каманды (ад 1 да 5). Каманды тлумачаць словы па чарзе.
      </li>
      <li>
        Адзін гулец бярэ тэлефон і тлумачыць слова з экрана, астатнія ў камандзе адгадваюць.
      </li>
      <li>
        Нельга называць аднакаранёвыя словы, перакладаць слова на іншую мову і паказваць яго жэстамі. 
        Можна тлумачыць сінонімамі, антонімамі, апісаннем і асацыяцыямі.
      </li>
      <li>
        Адгадалі — націсніце 
        <b>
          Адгадана
        </b>
         (ці свайпніце направа): +1 ачко. Не ведаеце слова — 
        <b>
          Пас
        </b>
         (свайп налева): −1 ачко, калі ўключаны штраф.
      </li>
      <li>
        Раунд доўжыцца зададзены час. Пасля сігналу можна дагуляць апошняе слова, калі правіла ўключана.
      </li>
      <li>
        Пасля раунда паказваецца спіс словаў — спрэчныя адзнакі можна выправіць націскам.
      </li>
      <li>
        Гульня сканчаецца, калі нейкая каманда набірае мэтавую колькасць ачкоў; круг дагульваецца да канца, 
        каб ва ўсіх была роўная колькасць раундаў.
      </li>
    </ol>
    <button
      class="btn btn--primary"
      type="button"
    >
      Зразумела
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > rules (lat) 1`] = `
<div
  aria-label="Praviły hulni"
  aria-modal="true"
  class="sheet"
  role="dialog"
>
  <div
    class="sheet__backdrop"
  />
  <div
    class="sheet__body"
  >
    <div
      aria-hidden="true"
      class="sheet__grip"
    />
    <h2
      class="sheet__title"
    >
      Praviły
    </h2>
    <svg
      aria-hidden="true"
      class="band sheet__band"
      data-band="chain"
      height="10"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="10"
          id="_r_h_"
          patternUnits="userSpaceOnUse"
          width="8.571428571428571"
          x="50%"
        >
          <path
            d="M4.285714285714286 0h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 1.4285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 2.857142857142857h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM0 4.285714285714286h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM1.4285714285714286 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM7.142857142857143 5.714285714285714h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM2.857142857142857 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM5.714285714285714 7.142857142857143h1.4285714285714286v1.4285714285714286h-1.4285714285714286zM4.285714285714286 8.571428571428571h1.4285714285714286v1.4285714285714286h-1.4285714285714286z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="url(#_r_h_)"
        height="10"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
    <ol
      class="rules"
    >
      <li>
        Hulcy dzielacca na kamandy (ad 1 da 5). Kamandy tłumačać słovy pa čarzie.
      </li>
      <li>
        Adzin hulec biare telefon i tłumačyć słova z ekrana, astatnija ŭ kamandzie adhadvajuć.
      </li>
      <li>
        Nielha nazyvać adnakaraniovyja słovy, pierakładać słova na inšuju movu i pakazvać jaho žestami. 
        Možna tłumačyć sinonimami, antonimami, apisanniem i asacyjacyjami.
      </li>
      <li>
        Adhadali — nacisnicie 
        <b>
          Adhadana
        </b>
         (ci svajpnicie naprava): +1 ačko. Nie viedajecie słova — 
        <b>
          Pas
        </b>
         (svajp naleva): −1 ačko, kali ŭklučany štraf.
      </li>
      <li>
        Raund doŭžycca zadadzieny čas. Pasla sihnału možna dahulać apošniaje słova, kali praviła ŭklučana.
      </li>
      <li>
        Pasla raunda pakazvajecca spis słovaŭ — sprečnyja adznaki možna vypravić naciskam.
      </li>
      <li>
        Hulnia skančajecca, kali niejkaja kamanda nabiraje metavuju kolkasć ačkoŭ; kruh dahulvajecca da kanca, 
        kab va ŭsich była roŭnaja kolkasć raundaŭ.
      </li>
    </ol>
    <button
      class="btn btn--primary"
      type="button"
    >
      Zrazumieła
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > setup (cyr) 1`] = `
<div
  class="screen screen--scroll"
>
  <header
    class="brand"
  >
    <svg
      aria-hidden="true"
      class="band brand__band"
      data-band="dotted"
      height="18.857142857142858"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="12"
          id="_r_0_"
          patternUnits="userSpaceOnUse"
          width="10.285714285714285"
          x="50%"
        >
          <path
            d="M5.142857142857142 0h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM0 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 10.285714285714285h1.7142857142857142v1.7142857142857142h-1.7142857142857142z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="0"
      />
      <rect
        fill="url(#_r_0_)"
        height="12"
        width="100%"
        x="0"
        y="3.4285714285714284"
      />
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="17.142857142857142"
      />
    </svg>
    <h1
      class="brand__title"
    >
      Аліяс
    </h1>
    <p
      class="brand__subtitle"
    >
      тлумач словы па-беларуску
    </p>
    <svg
      aria-hidden="true"
      class="band brand__band"
      data-band="dotted"
      height="18.857142857142858"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="12"
          id="_r_1_"
          patternUnits="userSpaceOnUse"
          width="10.285714285714285"
          x="50%"
        >
          <path
            d="M5.142857142857142 0h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM0 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 10.285714285714285h1.7142857142857142v1.7142857142857142h-1.7142857142857142z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="0"
      />
      <rect
        fill="url(#_r_1_)"
        height="12"
        width="100%"
        x="0"
        y="3.4285714285714284"
      />
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="17.142857142857142"
      />
    </svg>
  </header>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Каманды
    </h2>
    <div
      aria-label="Колькасць каманд"
      class="chips chips--md"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="chip"
        role="radio"
        type="button"
      >
        1
      </button>
      <button
        aria-checked="true"
        class="chip is-on"
        role="radio"
        type="button"
      >
        2
      </button>
      <button
        aria-checked="false"
        class="chip"
        role="radio"
        type="button"
      >
        3
      </button>
      <button
        aria-checked="false"
        class="chip"
        role="radio"
        type="button"
      >
        4
      </button>
      <button
        aria-checked="false"
        class="chip"
        role="radio"
        type="button"
      >
        5
      </button>
    </div>
    <ul
      class="teamlist"
    >
      <li
        class="teamlist__item"
        style="--team: #c1272d;"
      >
        <svg
          aria-hidden="true"
          class="motif teamlist__motif"
          data-motif="sun"
          height="22"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="22"
        >
          <path
            d="M0 0h1v1h-1zM4 0h1v1h-1zM8 0h1v1h-1zM1 1h1v1h-1zM4 1h1v1h-1zM7 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM3 3h1v1h-1zM4 3h1v1h-1zM5 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM3 4h1v1h-1zM5 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM3 5h1v1h-1zM4 5h1v1h-1zM5 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM1 7h1v1h-1zM4 7h1v1h-1zM7 7h1v1h-1zM0 8h1v1h-1zM4 8h1v1h-1zM8 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <input
          aria-label="Назва каманды 1"
          autocomplete="off"
          class="teamlist__input"
          enterkeyhint="done"
          maxlength="18"
          value="Зубры"
        />
      </li>
      <li
        class="teamlist__item"
        style="--team: #2b6cc4;"
      >
        <svg
          aria-hidden="true"
          class="motif teamlist__motif"
          data-motif="star"
          height="22"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="22"
        >
          <path
            d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM1 2h1v1h-1zM3 2h1v1h-1zM5 2h1v1h-1zM7 2h1v1h-1zM2 3h1v1h-1zM6 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM2 5h1v1h-1zM6 5h1v1h-1zM1 6h1v1h-1zM3 6h1v1h-1zM5 6h1v1h-1zM7 6h1v1h-1zM3 7h1v1h-1zM4 7h1v1h-1zM5 7h1v1h-1zM4 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <input
          aria-label="Назва каманды 2"
          autocomplete="off"
          class="teamlist__input"
          enterkeyhint="done"
          maxlength="18"
          value="Буслы"
        />
      </li>
    </ul>
  </section>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Словы
    </h2>
    <div
      aria-label="Складанасць слоў"
      class="levels"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        class="level is-on"
        role="radio"
        type="button"
      >
        <span
          class="level__label"
        >
          Лёгкі
        </span>
        <span
          class="level__hint"
        >
          Простыя штодзённыя словы
        </span>
        <span
          class="level__count"
        >
          340 слоў
        </span>
      </button>
      <button
        aria-checked="false"
        class="level"
        role="radio"
        type="button"
      >
        <span
          class="level__label"
        >
          Сярэдні
        </span>
        <span
          class="level__hint"
        >
          Паняцці, прафесіі, дзеясловы
        </span>
        <span
          class="level__count"
        >
          304 словы
        </span>
      </button>
      <button
        aria-checked="false"
        class="level"
        role="radio"
        type="button"
      >
        <span
          class="level__label"
        >
          Складаны
        </span>
        <span
          class="level__hint"
        >
          Тэрміны і абстракцыі
        </span>
        <span
          class="level__count"
        >
          242 словы
        </span>
      </button>
      <button
        aria-checked="false"
        class="level"
        role="radio"
        type="button"
      >
        <span
          class="level__label"
        >
          Усе разам
        </span>
        <span
          class="level__hint"
        >
          Мяшанка ўсіх узроўняў
        </span>
        <span
          class="level__count"
        >
          886 слоў
        </span>
      </button>
    </div>
    <div
      class="row"
    >
      <span
        class="row__label"
      >
        Алфавіт
      </span>
      <div
        aria-label="Алфавіт"
        class="chips chips--md"
        role="radiogroup"
      >
        <button
          aria-checked="true"
          class="chip is-on"
          role="radio"
          type="button"
        >
          Кірыліца
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          Лацінка
        </button>
      </div>
    </div>
  </section>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Раунд
    </h2>
    <div
      class="row"
    >
      <span
        class="row__label"
      >
        Час раунда
      </span>
      <div
        aria-label="Час раунда"
        class="chips chips--md"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          30 с
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          45 с
        </button>
        <button
          aria-checked="true"
          class="chip is-on"
          role="radio"
          type="button"
        >
          60 с
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          90 с
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <span
        class="row__label"
      >
        Гуляем да
      </span>
      <div
        aria-label="Мэтавы лік"
        class="chips chips--md"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          20
        </button>
        <button
          aria-checked="true"
          class="chip is-on"
          role="radio"
          type="button"
        >
          30
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          50
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          75
        </button>
      </div>
    </div>
  </section>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Дадаткова
    </h2>
    <button
      aria-checked="true"
      class="toggle"
      role="switch"
      type="button"
    >
      <span
        class="toggle__text"
      >
        <span
          class="toggle__label"
        >
          Штраф за пас
        </span>
        <span
          class="toggle__hint"
        >
          Прапушчанае слова адымае адно ачко
        </span>
      </span>
      <span
        aria-hidden="true"
        class="switch is-on"
      >
        <span
          class="switch__knob"
        />
      </span>
    </button>
    <button
      aria-checked="true"
      class="toggle"
      role="switch"
      type="button"
    >
      <span
        class="toggle__text"
      >
        <span
          class="toggle__label"
        >
          Апошняе слова
        </span>
        <span
          class="toggle__hint"
        >
          Пасля сігналу дазваляецца дагуляць слова на экране
        </span>
      </span>
      <span
        aria-hidden="true"
        class="switch is-on"
      >
        <span
          class="switch__knob"
        />
      </span>
    </button>
    <button
      aria-checked="true"
      class="toggle"
      role="switch"
      type="button"
    >
      <span
        class="toggle__text"
      >
        <span
          class="toggle__label"
        >
          Гук
        </span>
      </span>
      <span
        aria-hidden="true"
        class="switch is-on"
      >
        <span
          class="switch__knob"
        />
      </span>
    </button>
    <button
      aria-checked="true"
      class="toggle"
      role="switch"
      type="button"
    >
      <span
        class="toggle__text"
      >
        <span
          class="toggle__label"
        >
          Вібрацыя
        </span>
      </span>
      <span
        aria-hidden="true"
        class="switch is-on"
      >
        <span
          class="switch__knob"
        />
      </span>
    </button>
    <div
      class="row"
    >
      <span
        class="row__label"
      >
        Тэма
      </span>
      <div
        aria-label="Тэма"
        class="chips chips--sm"
        role="radiogroup"
      >
        <button
          aria-checked="true"
          class="chip is-on"
          role="radio"
          type="button"
        >
          Як у сістэме
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          Светлая
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          Цёмная
        </button>
      </div>
    </div>
  </section>
  <div
    class="actions actions--sticky"
  >
    <button
      class="btn btn--ghost"
      type="button"
    >
      Правілы
    </button>
    <button
      class="btn btn--primary"
      type="button"
    >
      Пачаць гульню
    </button>
  </div>
</div>
`;

exports[`снапшоты экранаў > setup (lat) 1`] = `
<div
  class="screen screen--scroll"
>
  <header
    class="brand"
  >
    <svg
      aria-hidden="true"
      class="band brand__band"
      data-band="dotted"
      height="18.857142857142858"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="12"
          id="_r_9_"
          patternUnits="userSpaceOnUse"
          width="10.285714285714285"
          x="50%"
        >
          <path
            d="M5.142857142857142 0h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM0 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 10.285714285714285h1.7142857142857142v1.7142857142857142h-1.7142857142857142z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="0"
      />
      <rect
        fill="url(#_r_9_)"
        height="12"
        width="100%"
        x="0"
        y="3.4285714285714284"
      />
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="17.142857142857142"
      />
    </svg>
    <h1
      class="brand__title"
    >
      Alias
    </h1>
    <p
      class="brand__subtitle"
    >
      tłumač słovy pa-biełarusku
    </p>
    <svg
      aria-hidden="true"
      class="band brand__band"
      data-band="dotted"
      height="18.857142857142858"
      shape-rendering="crispEdges"
      width="100%"
    >
      <defs>
        <pattern
          height="12"
          id="_r_a_"
          patternUnits="userSpaceOnUse"
          width="10.285714285714285"
          x="50%"
        >
          <path
            d="M5.142857142857142 0h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 1.7142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 3.4285714285714284h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM0 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 5.142857142857142h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM1.7142857142857142 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM8.571428571428571 6.857142857142857h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM3.4285714285714284 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM6.857142857142857 8.571428571428571h1.7142857142857142v1.7142857142857142h-1.7142857142857142zM5.142857142857142 10.285714285714285h1.7142857142857142v1.7142857142857142h-1.7142857142857142z"
            fill="currentColor"
          />
        </pattern>
      </defs>
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="0"
      />
      <rect
        fill="url(#_r_a_)"
        height="12"
        width="100%"
        x="0"
        y="3.4285714285714284"
      />
      <rect
        fill="currentColor"
        height="1.7142857142857142"
        width="100%"
        x="0"
        y="17.142857142857142"
      />
    </svg>
  </header>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Kamandy
    </h2>
    <div
      aria-label="Kolkasć kamand"
      class="chips chips--md"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="chip"
        role="radio"
        type="button"
      >
        1
      </button>
      <button
        aria-checked="true"
        class="chip is-on"
        role="radio"
        type="button"
      >
        2
      </button>
      <button
        aria-checked="false"
        class="chip"
        role="radio"
        type="button"
      >
        3
      </button>
      <button
        aria-checked="false"
        class="chip"
        role="radio"
        type="button"
      >
        4
      </button>
      <button
        aria-checked="false"
        class="chip"
        role="radio"
        type="button"
      >
        5
      </button>
    </div>
    <ul
      class="teamlist"
    >
      <li
        class="teamlist__item"
        style="--team: #c1272d;"
      >
        <svg
          aria-hidden="true"
          class="motif teamlist__motif"
          data-motif="sun"
          height="22"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="22"
        >
          <path
            d="M0 0h1v1h-1zM4 0h1v1h-1zM8 0h1v1h-1zM1 1h1v1h-1zM4 1h1v1h-1zM7 1h1v1h-1zM2 2h1v1h-1zM4 2h1v1h-1zM6 2h1v1h-1zM3 3h1v1h-1zM4 3h1v1h-1zM5 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM3 4h1v1h-1zM5 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM3 5h1v1h-1zM4 5h1v1h-1zM5 5h1v1h-1zM2 6h1v1h-1zM4 6h1v1h-1zM6 6h1v1h-1zM1 7h1v1h-1zM4 7h1v1h-1zM7 7h1v1h-1zM0 8h1v1h-1zM4 8h1v1h-1zM8 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <input
          aria-label="Nazva kamandy 1"
          autocomplete="off"
          class="teamlist__input"
          enterkeyhint="done"
          maxlength="18"
          value="Зубры"
        />
      </li>
      <li
        class="teamlist__item"
        style="--team: #2b6cc4;"
      >
        <svg
          aria-hidden="true"
          class="motif teamlist__motif"
          data-motif="star"
          height="22"
          shape-rendering="crispEdges"
          viewBox="0 0 9 9"
          width="22"
        >
          <path
            d="M4 0h1v1h-1zM3 1h1v1h-1zM4 1h1v1h-1zM5 1h1v1h-1zM1 2h1v1h-1zM3 2h1v1h-1zM5 2h1v1h-1zM7 2h1v1h-1zM2 3h1v1h-1zM6 3h1v1h-1zM0 4h1v1h-1zM1 4h1v1h-1zM2 4h1v1h-1zM6 4h1v1h-1zM7 4h1v1h-1zM8 4h1v1h-1zM2 5h1v1h-1zM6 5h1v1h-1zM1 6h1v1h-1zM3 6h1v1h-1zM5 6h1v1h-1zM7 6h1v1h-1zM3 7h1v1h-1zM4 7h1v1h-1zM5 7h1v1h-1zM4 8h1v1h-1z"
            fill="currentColor"
          />
        </svg>
        <input
          aria-label="Nazva kamandy 2"
          autocomplete="off"
          class="teamlist__input"
          enterkeyhint="done"
          maxlength="18"
          value="Буслы"
        />
      </li>
    </ul>
  </section>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Słovy
    </h2>
    <div
      aria-label="Składanasć słoŭ"
      class="levels"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        class="level is-on"
        role="radio"
        type="button"
      >
        <span
          class="level__label"
        >
          Lohki
        </span>
        <span
          class="level__hint"
        >
          Prostyja štodzionnyja słovy
        </span>
        <span
          class="level__count"
        >
          340 słoŭ
        </span>
      </button>
      <button
        aria-checked="false"
        class="level"
        role="radio"
        type="button"
      >
        <span
          class="level__label"
        >
          Siaredni
        </span>
        <span
          class="level__hint"
        >
          Paniacci, prafiesii, dziejasłovy
        </span>
        <span
          class="level__count"
        >
          304 słovy
        </span>
      </button>
      <button
        aria-checked="false"
        class="level"
        role="radio"
        type="button"
      >
        <span
          class="level__label"
        >
          Składany
        </span>
        <span
          class="level__hint"
        >
          Terminy i abstrakcyi
        </span>
        <span
          class="level__count"
        >
          242 słovy
        </span>
      </button>
      <button
        aria-checked="false"
        class="level"
        role="radio"
        type="button"
      >
        <span
          class="level__label"
        >
          Usie razam
        </span>
        <span
          class="level__hint"
        >
          Miašanka ŭsich uzroŭniaŭ
        </span>
        <span
          class="level__count"
        >
          886 słoŭ
        </span>
      </button>
    </div>
    <div
      class="row"
    >
      <span
        class="row__label"
      >
        Ałfavit
      </span>
      <div
        aria-label="Ałfavit"
        class="chips chips--md"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          Kirylica
        </button>
        <button
          aria-checked="true"
          class="chip is-on"
          role="radio"
          type="button"
        >
          Łacinka
        </button>
      </div>
    </div>
  </section>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Raund
    </h2>
    <div
      class="row"
    >
      <span
        class="row__label"
      >
        Čas raunda
      </span>
      <div
        aria-label="Čas raunda"
        class="chips chips--md"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          30 s
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          45 s
        </button>
        <button
          aria-checked="true"
          class="chip is-on"
          role="radio"
          type="button"
        >
          60 s
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          90 s
        </button>
      </div>
    </div>
    <div
      class="row"
    >
      <span
        class="row__label"
      >
        Hulajem da
      </span>
      <div
        aria-label="Metavy lik"
        class="chips chips--md"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          20
        </button>
        <button
          aria-checked="true"
          class="chip is-on"
          role="radio"
          type="button"
        >
          30
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          50
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          75
        </button>
      </div>
    </div>
  </section>
  <section
    class="panel"
  >
    <h2
      class="panel__title"
    >
      Dadatkova
    </h2>
    <button
      aria-checked="true"
      class="toggle"
      role="switch"
      type="button"
    >
      <span
        class="toggle__text"
      >
        <span
          class="toggle__label"
        >
          Štraf za pas
        </span>
        <span
          class="toggle__hint"
        >
          Prapuščanaje słova adymaje adno ačko
        </span>
      </span>
      <span
        aria-hidden="true"
        class="switch is-on"
      >
        <span
          class="switch__knob"
        />
      </span>
    </button>
    <button
      aria-checked="true"
      class="toggle"
      role="switch"
      type="button"
    >
      <span
        class="toggle__text"
      >
        <span
          class="toggle__label"
        >
          Apošniaje słova
        </span>
        <span
          class="toggle__hint"
        >
          Pasla sihnału dazvalajecca dahulać słova na ekranie
        </span>
      </span>
      <span
        aria-hidden="true"
        class="switch is-on"
      >
        <span
          class="switch__knob"
        />
      </span>
    </button>
    <button
      aria-checked="true"
      class="toggle"
      role="switch"
      type="button"
    >
      <span
        class="toggle__text"
      >
        <span
          class="toggle__label"
        >
          Huk
        </span>
      </span>
      <span
        aria-hidden="true"
        class="switch is-on"
      >
        <span
          class="switch__knob"
        />
      </span>
    </button>
    <button
      aria-checked="true"
      class="toggle"
      role="switch"
      type="button"
    >
      <span
        class="toggle__text"
      >
        <span
          class="toggle__label"
        >
          Vibracyja
        </span>
      </span>
      <span
        aria-hidden="true"
        class="switch is-on"
      >
        <span
          class="switch__knob"
        />
      </span>
    </button>
    <div
      class="row"
    >
      <span
        class="row__label"
      >
        Tema
      </span>
      <div
        aria-label="Tema"
        class="chips chips--sm"
        role="radiogroup"
      >
        <button
          aria-checked="true"
          class="chip is-on"
          role="radio"
          type="button"
        >
          Jak u sistemie
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          Svietłaja
        </button>
        <button
          aria-checked="false"
          class="chip"
          role="radio"
          type="button"
        >
          Ciomnaja
        </button>
      </div>
    </div>
  </section>
  <div
    class="actions actions--sticky"
  >
    <button
      class="btn btn--ghost"
      type="button"
    >
      Praviły
    </button>
    <button
      class="btn btn--primary"
      type="button"
    >
      Pačać hulniu
    </button>
  </div>
</div>
`;
